scrollbar fix

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -656,9 +656,14 @@ div.calendly-badge-widget {
   float: left;
   width: 30%;
   height: 200px;
-  overflow: scroll;
+  overflow-y: hidden;
   margin-right: 35px;
 }
+
+.homepage > .category:hover, .homepage > .category:active, .homepage > .category:focus {
+  overflow-y: auto;
+}
+
 .homepage ul {
   display: block;
   list-style: none;
